# irts

./: GA_ARIMA_forecast_example_data.csv  ObsLevels_ARIMA111_all_states_boxplot_data_4y.csv  README.md  all_res.pkl  arima.py  arima_mae.csv  arima_missing2.py  arima_results.xlsx  demo.ipynb  figure.ipynb  figure_library.py  observation_arima.csv  pyproject.toml  run_gemini.ipynb  run_gp.ipynb  wide_filled.csv
src/irts/: __init__.py
